--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ It is the perfect name to represent this currency and the potential it has with 
                     </div>
                     <div class="">
                         <div class="about_banner">
-                            <img src="images/man.png" alt="" />
+                            <img src="images/man.gif" alt="" />
                         </div>
                     </div>
                 </div>
