--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
   </head>
 
   <body>
+  
+
     <!-- Page Content
     ================================================== -->
     <!-- Hero -->
@@ -57,8 +59,10 @@
         <ul class="nav-menu">
           <li><a href="#about">About Us</a></li>
           <li><a href="#features">Features</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#team">Team</a></li>
+          <li><a href="#section1">Features style 2</a></li>
+          <li><a href="#call-to-action">Wallet</a></li>
+          <li><a href="#call-to-action33">Join</a></li>
+          <li><a href="#call-to-action22">Miner</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
       
@@ -121,7 +125,7 @@ We want Argentum to be a long-term stable investment. We will strive to provide 
     <!-- /About -->
 
 <!-- About -->
-        <section id="miners">
+        <section id="namearg">
             <div class="container about_bg">
                 <div class="row">
                     <div class="col-lg-7 col-md-6">
@@ -386,6 +390,32 @@ We have a few mining pools supporting Argentum: </p>
     </section><!-- #call-to-action -->
 
 
+<a href="https://t.me/ArgentumCurrency" class="float" target="_blank">
+<i class="fa fa-telegram my-float"></i>
+</a>
+
+<div class="sticky-container">
+    <ul class="sticky">
+        <li>
+            <img src="Discord.svg" width="32" height="32">
+            <p><a href="https://www.facebook.com/" target="_blank">Join Us on<br>Discord</a></p>
+        </li>
+        <li>
+            <img src="twitter.svg" width="32" height="32">
+            <p><a href="https://twitter.com/argentum_ARG" target="_blank">Follow Us on<br>Twitter</a></p>
+        </li>
+        <li>
+            <img src="telegram.svg" width="32" height="32">
+            <p><a href="https://plus.google.com/codexworld" target="_blank">Join Us on<br>Telegram</a></p>
+        </li>
+        <li>
+            <img src="slack.svg" width="32" height="32">
+            <p><a href="https://argentumproject.slack.com" target="_blank">Join Us on<br>Slack</a></p>
+        </li>
+        
+    </ul>
+</div>
+
     <section class="portfolio" id="portfolio">
       <div class="container text-center">
         <h2>
@@ -411,7 +441,7 @@ We have a few mining pools supporting Argentum: </p>
     <div class="container">
       <div class="row">
         <div class="col-lg-7">
-          <img src="img/cover22.jpg" alt="" class="choose-img img-fluid">
+          <img src="img/cover22.gif" alt="" class="choose-img img-fluid">
         </div>
         <div class="col-lg-5 ">
           <div class="choose-wrapper">
