--- a/index.html
+++ b/index.html
@@ -389,6 +389,52 @@ We have a few mining pools supporting Argentum: </p>
       </div>
     </section><!-- #call-to-action -->
 
+    <!--==========================
+    Call To Action Section
+    ============================-->
+    <section id="call-to-action55">
+      <div class="container wow fadeIn">
+        <div class="row">
+          <div class="col-lg-12 text-center text-lg-left">
+            <h3 class="cta-title">Exchanges</h3>
+            
+
+          </div>
+          <div class="col-lg-3 cta-btn-container text-center">
+            <a href="/images/myw3schoolsimage.jpg" download>
+            <a class="cta-btn align-middle" href="https://www.cryptopia.co.nz/Exchange/?market=ARG_BTC/">Cryptopia  BTC</a>
+          </div>
+          <div class="col-lg-3 cta-btn-container text-center">
+            <a href="/images/myw3schoolsimage.jpg" download>
+            <a class="cta-btn align-middle" href="https://www.cryptopia.co.nz/Exchange/?market=ARG_DOGE">Cryptopia DOGE</a>
+          </div>
+          <div class="col-lg-3 cta-btn-container text-center">
+            <a href="/images/myw3schoolsimage.jpg" download>
+            <a class="cta-btn align-middle" href="https://novaexchange.com/market/BTC_ARG/">Nova Exchange</a>
+          </div>
+          <div class="col-lg-3 cta-btn-container text-center">
+            <a href="/images/myw3schoolsimage.jpg" download>
+            <a class="cta-btn align-middle" href="http://argentum.io/">Example</a>
+          </div>
+          <div class="col-lg-3 cta-btn-container text-center">
+            <a href="/images/myw3schoolsimage.jpg" download>
+            <a class="cta-btn align-middle" href="http://argentum.io/">Example</a>
+          </div>
+          <div class="col-lg-3 cta-btn-container text-center">
+            <a href="/images/myw3schoolsimage.jpg" download>
+            <a class="cta-btn align-middle" href="http://argentum.io/">Example</a>
+          </div>
+          <div class="col-lg-3 cta-btn-container text-center">
+            <a href="/images/myw3schoolsimage.jpg" download>
+            <a class="cta-btn align-middle" href="http://argentum.io/">Example</a>
+          </div>
+          
+
+      </div>
+
+      </div>
+    </section><!-- #call-to-action -->
+
 
 <a href="https://t.me/ArgentumCurrency" class="float" target="_blank">
 <i class="fa fa-telegram my-float"></i>
