--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ It is the perfect name to represent this currency and the potential it has with 
                     </div>
                     <div class="">
                         <div class="about_banner">
-                            <img src="images/man.gif" alt="" />
+                            <img src="https://m1.behance.net/rendition/modules/100887987/disp/c845b52e70de95a5b73b23f254ef1d29.gif" alt="" />
                         </div>
                     </div>
                 </div>
