--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Theme</title>
+    <title>ARGENTUM</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -32,10 +32,6 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
          <img id="logo" src="img/2.png" alt="BrandLog">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top"></a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
         <a class="navbar-brand js-scroll-trigger" href="#page-top">ARGENTUM</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -179,7 +175,7 @@ We want Argentum to be a long-term stable investment. We will strive to provide 
     <div class="container">
       <div class="row">
         <div class="col-lg-7">
-          <img src="img/cover22.gif" alt="" class="choose-img img-fluid">
+          <img src="img/Comp-2.gif" alt="" class="choose-img img-fluid">
         </div>
         <div class="col-lg-5 ">
           <div class="choose-wrapper">
