--- a/index.html
+++ b/index.html
@@ -152,6 +152,10 @@ world in the field of post-COVID-19 using decentralized blockchain.
                         <div class="col-lg-5 col-md-7">
                             <h2>KEYFEATURES</h2>
                             <p class="lead"> Some key features of Freedom Token are: </p>
+							<p class="lead"> Some key features of Freedom Token are: </p>
+							<p class="lead"> Some key features of Freedom Token are: </p>
+							<p class="lead"> Some key features of Freedom Token are: </p>
+							<p class="lead"> Some key features of Freedom Token are: </p>
                             <p class="lead"> • Secured and safe: Freedom Token leverages a distributed peer-to-peer consensus network that cryptographically 
 								helps in securing every transaction.
 								<br> <br>	• Quick transfer: Instant fund transfer globally is available with the help of fast block execution unlike traditional 
