--- a/index.html
+++ b/index.html
@@ -151,20 +151,16 @@ world in the field of post-COVID-19 using decentralized blockchain.
                     <div class="row">
                         <div class="col-lg-5 col-md-7">
                             <h2>KEYFEATURES</h2>
-                            <p class="lead"> Some key features of Freedom Token are: </p>
-							<p class="lead"> Some key features of Freedom Token are: </p>
-							<p class="lead"> Some key features of Freedom Token are: </p>
-							<p class="lead"> Some key features of Freedom Token are: </p>
-							<p class="lead"> Some key features of Freedom Token are: </p>
                             <p class="lead"> • Secured and safe: Freedom Token leverages a distributed peer-to-peer consensus network that cryptographically 
-								helps in securing every transaction.
-								<br> <br>	• Quick transfer: Instant fund transfer globally is available with the help of fast block execution unlike traditional 
-								remittance, unmatched speed, and payment processors.
-								<br> <br> 	• Decentralized: Direct transactions among network participants without the presence of a central facilitator are 
-								enabled with the help of decentralized technology.
-								<br> <br>	• Easy to use: User-friendly interface intended for seamless Real-world use cases.
-								<br> <br> 	• Scalability: Assures scalability for pacing up with the industry's transaction requirements, thereby facilitating mass 
+								helps in securing every transaction. </p>
+							<p class="lead"> • Quick transfer: Instant fund transfer globally is available with the help of fast block execution unlike traditional 
+								remittance, unmatched speed, and payment processors. </p>
+							<p class="lead"> • Decentralized: Direct transactions among network participants without the presence of a central facilitator are 
+								enabled with the help of decentralized technology. </p>
+							<p class="lead"> • Easy to use: User-friendly interface intended for seamless Real-world use cases. </p>
+							<p class="lead"> • Scalability: Assures scalability for pacing up with the industry's transaction requirements, thereby facilitating mass 
 								adoption of cryptocurrency. </p>
+                            
                         </div>
                     </div>
                 </div>
