--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ world in the field of post-COVID-19 using decentralized blockchain.
 										<br>✓ COVID-19 testing machines
 										<br>✓ COVID-19 immune building (nutrition and vitamins)
 										<br>✓ COVID-19 rehabilitation centers
-										<br>	✓ Immunization
+										<br>✓ Immunization
 										<br>✓ Medication
 										<br>✓ Patient co pays
 										<br>✓ Food bank</p>
@@ -196,7 +196,6 @@ world in the field of post-COVID-19 using decentralized blockchain.
 				</section>
 	
 
-
 <section>
 	<div class="container">
 		<div class="row">
@@ -245,7 +244,36 @@ world in the field of post-COVID-19 using decentralized blockchain.
 	</div>
 </section>
 
-
+<section>
+	<div class="container">
+		<div class="process-2 row">
+			<div class="col-md-3">
+				<div class="process__item">
+					<h5>PHASE 1</h5>
+					<p> ✓Incorporation of our legal entity<br>✓Create of Admin Team<br>✓Release of Whitepaper<br>✓Website &amp; Social Channels </p>
+				</div>
+			</div>
+			<div class="col-md-3">
+				<div class="process__item">
+					<h5>PHASE 2</h5>
+					<p> Health Care Partnerships<br>Launch of FREEDOM TOKEN<br>Listing on CoinGecko<br>Listing on CoinMarketCap </p>
+				</div>
+			</div>
+			<div class="col-md-3">
+				<div class="process__item">
+					<h5>PHASE 3</h5>
+					<p>Launch Merchandising<br>(5% will go to Charity Wallet)<br>Hold Community Poll for Charities of Choice (First Beneficiary: Soul Foundation)<br>Donations Begin Powered by our<br>(Partnerships &amp; Cryptocurrency)</p>
+				</div>
+			</div>
+			<div class="col-md-3">
+				<div class="process__item">
+					<h5>PHASE 4</h5>
+					<p>Crowdfunding for listing<br>in major exchanges<br>Collaboration with major influencers<br>for charitable impact<br>Expansion of global charity partnerships<br>Real world direct impacts (Food Banks, COVID-19 Testing, Donations of PPE)</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
 
 		<section>
 		    <div class="container">
@@ -381,6 +409,9 @@ world in the field of post-COVID-19 using decentralized blockchain.
                     </div>
                 </div>
             </section>	
+			
+			
+
 			
 
             <footer class="footer-3 text-center-xs space--xs">
