--- a/index.html
+++ b/index.html
@@ -256,7 +256,10 @@ world in the field of post-COVID-19 using decentralized blockchain.
 			<div class="col-md-3">
 				<div class="process__item">
 					<h5>PHASE 2</h5>
-					<p> Health Care Partnerships<br>Launch of FREEDOM TOKEN<br>Listing on CoinGecko<br>Listing on CoinMarketCap </p>
+					<p> Health Care Partnerships</p>
+					<p>Launch of FREEDOM TOKEN</p>
+					<p>Listing on CoinGecko</p>
+					<p>Listing on CoinMarketCap</p>
 				</div>
 			</div>
 			<div class="col-md-3">
