--- a/index.html
+++ b/index.html
@@ -250,7 +250,10 @@ world in the field of post-COVID-19 using decentralized blockchain.
 			<div class="col-md-3">
 				<div class="process__item">
 					<h5>PHASE 1</h5>
-					<p> ✓Incorporation of our legal entity<br>✓Create of Admin Team<br>✓Release of Whitepaper<br>✓Website &amp; Social Channels </p>
+					<p> Health Care Partnerships</p>
+					<p>Launch of FREEDOM TOKEN</p>
+					<p>Listing on CoinGecko</p>
+					<p>Listing on CoinMarketCap</p>
 				</div>
 			</div>
 			<div class="col-md-3">
@@ -265,13 +268,19 @@ world in the field of post-COVID-19 using decentralized blockchain.
 			<div class="col-md-3">
 				<div class="process__item">
 					<h5>PHASE 3</h5>
-					<p>Launch Merchandising<br>(5% will go to Charity Wallet)<br>Hold Community Poll for Charities of Choice (First Beneficiary: Soul Foundation)<br>Donations Begin Powered by our<br>(Partnerships &amp; Cryptocurrency)</p>
+					<p> Health Care Partnerships</p>
+					<p>Launch of FREEDOM TOKEN</p>
+					<p>Listing on CoinGecko</p>
+					<p>Listing on CoinMarketCap</p>
 				</div>
 			</div>
 			<div class="col-md-3">
 				<div class="process__item">
 					<h5>PHASE 4</h5>
-					<p>Crowdfunding for listing<br>in major exchanges<br>Collaboration with major influencers<br>for charitable impact<br>Expansion of global charity partnerships<br>Real world direct impacts (Food Banks, COVID-19 Testing, Donations of PPE)</p>
+					<p> Health Care Partnerships</p>
+					<p>Launch of FREEDOM TOKEN</p>
+					<p>Listing on CoinGecko</p>
+					<p>Listing on CoinMarketCap</p>
 				</div>
 			</div>
 		</div>
