--- a/index.html
+++ b/index.html
@@ -244,16 +244,17 @@ world in the field of post-COVID-19 using decentralized blockchain.
 	</div>
 </section>
 
+
 <section>
 	<div class="container">
 		<div class="process-2 row">
 			<div class="col-md-3">
 				<div class="process__item">
 					<h5>PHASE 1</h5>
-					<p> Health Care Partnerships</p>
-					<p>Launch of FREEDOM TOKEN</p>
-					<p>Listing on CoinGecko</p>
-					<p>Listing on CoinMarketCap</p>
+					<p><span style="color: #006e21">✓ </span>Incorporation of our legal entity</p>
+					<p><span style="color: #006e21">✓ </span>Create of Admin Team</p>
+					<p><span style="color: #006e21">✓ </span>Release of Whitepaper</p>
+					<p><span style="color: #006e21">✓ </span>Website & Social Channels</p>
 				</div>
 			</div>
 			<div class="col-md-3">
@@ -268,19 +269,18 @@ world in the field of post-COVID-19 using decentralized blockchain.
 			<div class="col-md-3">
 				<div class="process__item">
 					<h5>PHASE 3</h5>
-					<p> Health Care Partnerships</p>
-					<p>Launch of FREEDOM TOKEN</p>
-					<p>Listing on CoinGecko</p>
-					<p>Listing on CoinMarketCap</p>
+					<p> Launch Merchandising <br>(5% will go to Charity Wallet) <br>(First Beneficiary: Soul Foundation)</p>
+					<p>Hold Community Poll <br> for Charities of Choice</p>
+					<p>Donations Begin Powered by our <br> (Partnerships & Cryptocurrency)</p>
 				</div>
 			</div>
 			<div class="col-md-3">
 				<div class="process__item">
 					<h5>PHASE 4</h5>
-					<p> Health Care Partnerships</p>
-					<p>Launch of FREEDOM TOKEN</p>
-					<p>Listing on CoinGecko</p>
-					<p>Listing on CoinMarketCap</p>
+					<p> Crowdfunding for <br> listing in major exchanges</p>
+					<p>Collaboration with major influencers <br> for charitable impact</p>
+					<p>Expansion of global charity partnerships</p>
+					<p>Real world direct impacts (Food Banks, COVID-19 Testing, Donations of PPE)</p>
 				</div>
 			</div>
 		</div>
