--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 		                    <p>
 		                        The Freedom is a community-driven and fairly released Token with the goal of creating a worldwide revolution in the post-COVID-19 field using decentralized blockchain.
 		                    </p>
-							<a class="btn-filled btn" href="#">BUY FREEDOM TOKEN</a>
-							<a class="btn-filled btn" href="#">WHITEPAPER</a>
+							<a class="btn btn-outline-primary" href="#">BUY FREEDOM TOKEN</a>
+							<a class="btn btn-outline-primary" href="#">WHITEPAPER</a>
 		                </div>
 						
 		                <div class ="col-md-7 col-md-offset-1 col-sm-6 col-sm-offset-1 text-center" >
