--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
 <!-- Extra CSS -->
 <link rel="stylesheet" href="assets/css/theme.css?ver=1930">
 
-
-
-
 </head>
  
 
@@ -52,7 +49,7 @@
 							<nav class="header-menu" id="header-menu">
                                 <ul class="menu">
                                     <li class="menu-item">
-                                        <a class="menu-link nav-link" href="#header">Home</a>
+                                        <a class="menu-link nav-link" href="#header">1111Home</a>
                                     </li>
                                     <li class="menu-item">
                                         <a class="menu-link nav-link" href="#about">About</a>
