--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<!-- Logo @s -->
 						<div class="header-logo logo">
 							<a href="./" class="logo-link">
-								<img class="logo-dark" src="images/logo2.png" srcset="images/logo2x.png 2x" alt="logo">
+								<img class="logo-dark" src="images/logo2.png" srcset="images/logo2.png 2x" alt="logo">
 								<img class="logo-light" src="images/logo-s3-white.png" srcset="images/logo-s3-white.png 2x" alt="logo">
 							</a>
 						</div>
