--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<nav class="header-menu" id="header-menu">
                                 <ul class="menu">
                                     <li class="menu-item">
-                                        <a class="menu-link nav-link" href="#header">1111Home</a>
+                                        <a class="menu-link nav-link" href="#header">Home</a>
                                     </li>
                                     <li class="menu-item">
                                         <a class="menu-link nav-link" href="#about">About</a>
