--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 						<!-- Logo @s -->
 						<div class="header-logo logo">
 							<a href="./" class="logo-link">
-								<img class="logo-dark" src="images/logo.png" srcset="images/logo2x.png 2x" alt="logo">
-								<img class="logo-light" src="images/logowhite.png" srcset="images/logo2x.png 2x" alt="logo">
+								<img class="logo-dark" src="images/logo.png" srcset="images/logo.png 2x" alt="logo">
+								<img class="logo-light" src="images/logowhite.png" srcset="images/logowhite.png 2x" alt="logo">
 							</a>
 						</div>
 
@@ -558,7 +558,7 @@
                                         <li class="animated" data-animate="fadeInUp" data-delay="1.8"><a href="#"><em class="social-icon fab fa-telegram"></em></a></li>
                                     </ul>
                                     <a href="./" class="footer-logo">
-                                        <img src="images/logowhite.png" srcset="images/logo2x.png 2x" alt="logo">
+                                        <img src="images/logowhite.png" srcset="images/logo.png 2x" alt="logo">
                                     </a>
                                     <div class="copyright-text copyright-text-s3 pdt-m">
                                         <p><span class="tc-white d-sm-block">Copyright &copy; 2021, FREEDOM PROTOCOL. </span>TOGETHER WE SERVE</p>
