--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 <meta name="author" content="Softnio">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="">
+<meta name="title" content="Freedom Token - Together We Serve">
+<meta name="description" content="Freedom is a Token with the goal of creating a worldwide revolution in the post-COVID-19 field using decentralized blockchain.">
+<meta name="keywords" content="Cryptocurrency, Token, Charity Token, Healthcare, Crypto,Bitcoin, Ethereum, BSC">
+<meta name="robots" content="index, follow">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="language" content="English">
+
 <!-- Fav Icon  -->
 <link rel="shortcut icon" href="images/faviconfreedom.png">
 <!-- Site Title  -->
